@@ -1,3 +1,13 @@
+2008-07-29  Johan Dahlin  <johan@gnome.org>
+
+	* examples/gio/downloader.py:
+	Add a new example
+
+	* gio/ginputstream.override:
+	Use a string internally instead of a PyStringObject when
+	in read_async. Create a new python string in finish and
+	honor the number of bytes read.
+
 2008-07-28  Johan Dahlin  <johan@gnome.org>
 
 	* glib/pyglib-python-compat.h:
